--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,35 +1,19 @@
-<p>book works!</p>
 <div class="w3-container" style="padding:90px 0px">
     <h3 class="w3-center">BOOKS</h3>
     <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
         <div *ngFor="let book of books">
-
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-card">
-                    <!-- <img src="/fork-app//src/assets/atomic_habits.jpg" alt="book.bName" style="width:100%" /> -->
-                    <div class="w3-dropdown-hover">
-                        <img src="img_snowtops.jpg" alt="Norway" style="width:20%">
-                        <div class="w3-dropdown-content" style="width:300px">
-                            <img src="img_snowtops.jpg" alt="Norway" style="width:100%">
-                        </div>
-                    </div>
-
                     <div class="w3-container">
                         <h3>{{book.name}}</h3>
                         <h4><i class="fa fa-inr"></i>{{book.price}}</h4>
                         <p>
-                            <button class="w3-button w3-black w3-block">
-                                Buy</button>
-                        </p>
-                        <p>
-                            <button class="w3-button w3-black w3-block">
+                            <button (click)="addBookToCart(book)" class="w3-button w3-black w3-block">
                                 Add To Cart</button>
                         </p>
                     </div>
                 </div>
             </div>
-
         </div>
-
     </div>
 </div>
