--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -27,18 +27,11 @@
 
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-card">
-                    <!-- <img src="laptop.lImage" alt="laptop.lName" style="width:100%" /> -->
-                    <div class="w3-dropdown-hover">
-                        <img src="img_snowtops.jpg" alt="Norway" style="width:20%">
-                        <div class="w3-dropdown-content" style="width:300px">
-                            <img src="img_snowtops.jpg" alt="Norway" style="width:100%">
-                        </div>
-                    </div>
                     <div class="w3-container">
-                        <h3>{{item.Name}}</h3>
-                        <h4><i class="fa fa-inr"></i>{{item.Price}}</h4>
+                        <h3>{{item.name}}</h3>
+                        <h4><i class="fa fa-inr"></i>{{item.price}}</h4>
                         <p>
-                            <button class="w3-button w3-black w3-block">
+                            <button (click)="deleteItemFromCart(item.id)" class="w3-button w3-black w3-block">
                                 Remove From Cart</button>
                         </p>
                     </div>
