--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="w3-container w3-row w3-center w3-dark-grey w3-padding-64">
     <div class="w3-third">
-        <span class="w3-xxlarge">14+</span>
-        <br>Items
+        <span class="w3-xxlarge">50+</span>
+        <br>Books
     </div>
     <div class="w3-third">
         <span class="w3-xxlarge">55+</span>
@@ -18,9 +18,6 @@
 
 <!-- Book Trending Section-->
 <app-book></app-book>
-
-<!-- Mobile Trending Section -->
-<app-mobile></app-mobile>
 
 <!-- Laptop Trending Section -->
 <app-laptop></app-laptop>
