--- a/src/app/laptop/laptop.component.html
+++ b/src/app/laptop/laptop.component.html
@@ -6,21 +6,14 @@
 
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-card">
-                    <!-- <img src="laptop.lImage" alt="laptop.lName" style="width:100%" /> -->
-                    <div class="w3-dropdown-hover">
-                        <img src="img_snowtops.jpg" alt="Norway" style="width:20%">
-                        <div class="w3-dropdown-content" style="width:300px">
-                            <img src="img_snowtops.jpg" alt="Norway" style="width:100%">
-                        </div>
-                    </div>
                     <div class="w3-container">
-                        <h3>{{laptop.lName}}</h3>
-                        <h4><i class="fa fa-inr"></i>{{laptop.lPrice}}</h4>
+                        <h3>{{laptop.name}}</h3>
+                        <h4><i class="fa fa-inr"></i>{{laptop.price}}</h4>
                         <p><button class="w3-button w3-black w3-block">
                             Buy</button>
                     </p>
                     <p>
-                        <button class="w3-button w3-black w3-block">
+                        <button (click)="addLaptopToCart(laptop)" class="w3-button w3-black w3-block">
                             Add To Cart</button>
                     </p>
                     </div>
