--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -3,10 +3,15 @@
         <div class="w3-half">
             <ul class="w3-ul w3-white w3-hover-shadow">
                 <li class="w3-black w3-xlarge w3-padding-30">Items</li>
-                <li class="w3-padding-20"><h4>Books</h4></li>
-                <li class="w3-padding-20"><h4>Mobiles</h4></li>
-                <li class="w3-padding-20"><h4>Laptops</h4></li>
-                <li class="w3-padding-20"><h4>Total Items</h4></li>
+                <li class="w3-padding-20">
+                    <h4>Books</h4>
+                </li>
+                <li class="w3-padding-20">
+                    <h4>Laptops</h4>
+                </li>
+                <li class="w3-padding-20">
+                    <h4>Total Items</h4>
+                </li>
                 <li class="w3-padding-20">
                     <h2 class="w3-wide">Total Amount</h2>
                 </li>
@@ -15,12 +20,14 @@
         <div class="w3-half">
             <ul class="w3-ul w3-white w3-hover-shadow">
                 <li class="w3-red w3-xlarge w3-padding-20">Amount</li>
-                <li class="w3-padding-20"><h4><i class="fa fa-inr"></i>3312</h4></li>
-                <li class="w3-padding-20"><h4><i class="fa fa-inr"></i>3312</h4></li>
-                <li class="w3-padding-20"><h4><i class="fa fa-inr"></i>3312</h4></li>
-                <li class="w3-padding-20"><h4><i class="fa fa-inr"></i>3312</h4></li>
                 <li class="w3-padding-20">
-                    <h2 class="w3-wide"><i class="fa fa-inr"></i>5463452</h2>
+                    <h4><i class="fa fa-inr"></i>{{bookTotal}}</h4>
+                </li>
+                <li class="w3-padding-20">
+                    <h4><i class="fa fa-inr"></i>{{laptopTotal}}</h4>
+                </li>
+                <li class="w3-padding-20">
+                    <h2 class="w3-wide"><i class="fa fa-inr"></i>{{total}}</h2>
                 </li>
                 <li class="w3-light-grey w3-padding-24">
                     <button class="w3-button w3-black w3-padding-large">Pay</button>
